<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sample-ninjabox</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="choose_starter">Choose your starter!</string>
    <string name="your_starter">Your starter is:</string>
    <string name="start_ninja_mode">Enable</string>
    <string name="stop_ninja_mode">Disable</string>
    <string name="email_button">Email Info</string>
    <string name="logout">Log Out</string>

</resources>
