<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".MainActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <LinearLayout
        android:id="@+id/fullscreen_content"
        android:keepScreenOn="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="100dp"
            android:paddingBottom="30dp"
            android:text="@string/choose_starter"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <ImageView
            android:id="@+id/bulbasaur"
            android:contentDescription="@string/dummy_content"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/bulbasaur" />

            <ImageView
                android:id="@+id/charmander"
                android:contentDescription="@string/dummy_content"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/charmander" />

            <ImageView
                android:id="@+id/squirtle"
                android:contentDescription="@string/dummy_content"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/squirtle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/your_starter"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/starter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/dummy_content"
                android:paddingLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/email_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

 			<ToggleButton
 			    android:id="@+id/start_ninja_mode"
 			    android:layout_width="0dp"
 			    android:layout_height="50dp"
 			    android:layout_gravity="bottom"
 			    android:layout_weight="1"
 			    android:onClick="onNinjaModeClicked"
 			    android:textOff="@string/start_ninja_mode"
 			    android:textOn="@string/stop_ninja_mode" />

        </LinearLayout>
        
    </LinearLayout>

</FrameLayout>
